<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textname"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edittextname"
        android:textSize="15sp"
        android:id="@+id/editText_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkboxname"
        android:textSize="15sp"
        android:id="@+id/checkBox"
        android:layout_below="@+id/editText_name"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdaytextview"
        android:textSize="15sp"
        android:id="@+id/textView_birthday"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />


    <Spinner
        android:layout_width="fill_parent"
        android:textColor = "#9C27B0"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_eyeColor"


        android:layout_alignTop="@+id/textView3"
        android:layout_above="@+id/textView4"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eyecolortextview"
        android:textSize="15sp"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView_birthday"
        android:layout_alignStart="@+id/textView_birthday"
        android:layout_marginTop="15dp" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/radiogroup"
        android:layoutMode="clipBounds"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xs"
            android:textSize="15sp"
            android:id="@+id/radioButton_xs"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:textSize="15sp"
            android:id="@+id/radioButton_s"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textSize="15sp"
            android:id="@+id/radioButton_m"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:textSize="15sp"
            android:id="@+id/radioButton_l"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xl"
            android:textSize="15sp"
            android:id="@+id/radioButton_xl"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xxl"
            android:textSize="15sp"
            android:id="@+id/radioButton_xxl"
            android:checked="false" />

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantsizetextview"
        android:textSize="15sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/radiogroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />


    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pantSize"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp"
        android:max="16"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/textView_shirtSize" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shirtsizetextview"
        android:textSize="15sp"
        android:id="@+id/textView4"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView3" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shirttextview"
        android:textSize="15sp"
        android:maxWidth="200dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/pantSize"
        android:layout_alignEnd="@+id/textView3" />

    <SeekBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shirtSize"
        android:max="12"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/shoeSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shoesizetextview"
        android:textSize="15sp"
        android:id="@+id/textView7"
        android:layout_below="@+id/shirtSize"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shoeSize"
        android:max="8"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView7"
        android:layout_toStartOf="@+id/button_setBirthday"
        android:indeterminate="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitbutton"
        android:id="@+id/button_submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:text="@string/birthdaybutton"
        android:id="@+id/button_setBirthday"
        android:padding="1dp"
        android:layout_alignBottom="@+id/textView_birthday"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_shirtSize"
        android:layout_above="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/shirtSize"
        android:layout_toEndOf="@+id/shirtSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_pantsSize"
        android:layout_above="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/pantSize"
        android:layout_below="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_shoeSize"
        android:layout_alignBottom="@+id/shoeSize"
        android:layout_alignEnd="@+id/textView_shirtSize"
        android:layout_toEndOf="@+id/shoeSize"
        android:layout_below="@+id/textView7" />

</RelativeLayout>
